section casca-banana

--- a/css/stilo.css
+++ b/css/stilo.css
@@ -303,6 +303,7 @@ body{
 	top:-15.8rem;
 	right:36.4rem;
 }
+
 #nutrients .linha{
 	font-size: 2.4rem;
 	position: absolute;
@@ -322,4 +323,104 @@ body{
 	position: absolute;
 	top: 12rem;
 	left:29rem;
+}
+
+#casca-banana{
+	padding-top: 4.6rem;
+	padding-bottom:7.7rem;
+	position: relative;
+}
+
+#casca-banana h2{
+	color: #9b8019;
+	font-size: 4.5rem;
+	font-weight: 300;
+	margin-bottom: 2.1rem;
+}
+
+#casca-banana h3{
+	color: #9b8019;
+	font-weight: 400;
+}
+
+#casca-banana p{
+	color: #9b8019;
+	line-height: 1.5;
+	font-weight: 200;
+}
+
+#casca-banana h2 span{
+	font-weight: 500;
+}
+
+#casca-banana p span{
+	font-weight: 300;
+}
+
+#casca-banana .img1{
+    margin-top: 10.2rem;
+    position: relative;
+}
+
+#casca-banana .img2{
+	margin-top: 10.9rem;
+	position: relative;
+}
+
+#casca-banana .img3{
+	margin-top: 10.9rem;
+	position: relative;
+}
+
+.texto-img1{
+	margin-top: 5.6rem;
+	padding-bottom: 4.6rem; 
+}
+
+.texto-img2{
+	margin-top: 7.6rem;
+	padding-bottom: 4.6rem; 
+} 
+
+.texto-img3{
+	padding-bottom: 4.6rem; 
+}
+
+.fundo-direita{
+	position: absolute;
+	top:-4rem;
+	right:-8.9rem;
+	opacity: .4;
+	width: 15%;
+}
+
+.fundo-esquerda{
+	position: absolute;
+	top:0;
+	left: -8.9rem;
+	opacity: .5;
+	width: 15%;
+}
+
+.fundo-besquerda{
+	position: absolute;
+	bottom: 0;
+	left: 7rem;
+	opacity: .5;
+	width: 15%;
+}
+
+.fundo-bdireita{
+	position: absolute;
+	bottom: 0;
+	right:9rem;
+	opacity: .4;
+	width: 15%;	
+}
+
+.fundo-bmeio{
+	position: absolute;
+	bottom: 0;
+	opacity: .4;
+	width: 15%;
 }
