--- a/css/stilo.css
+++ b/css/stilo.css
@@ -480,3 +480,70 @@ body{
 	bottom: 0;
 	left: 1.5rem;
 }
+
+#carousel{
+	padding-top: 4.6rem;
+	padding-bottom: 17.7rem;
+}
+
+#carousel h2{
+	color: #646464;
+	font-size: 4.5rem;
+	font-weight: 300;
+	margin-bottom: 6.7rem;
+}
+
+#carousel h2 span{
+	font-weight: 400;
+}
+
+#carousel p{
+	color:  #646464;
+	line-height: 1.5;
+	font-size: 2.4rem;
+	font-weight: 300;
+	font-style: oblique;
+	margin-bottom: 2rem;
+}
+
+.texto-m {
+	color:  #646464;
+	line-height: 1.5;
+	font-size: 2.2rem;
+	font-weight: 400;
+	text-transform: uppercase;
+}
+
+.texto-minions{
+	margin-top: 3rem;
+}
+
+.carousel-indicators{
+    bottom: -7.1rem;
+    margin-left: -30.3%;
+}
+
+ .carousel-indicators li {
+    border: 2px solid   #9b9999;
+    width: 14px;
+ 	height: 14px;
+ }
+
+ .carousel-indicators .active{
+ 	background-color: #9b9999;
+ 	width: 14px;
+   	height: 14px;
+ }
+
+ .carousel-control.left,.carousel-control.right {
+ 	background: white;
+ }
+
+.carousel-control.left span,.carousel-control.right span{
+	color:  #646464;
+	font-size: 10rem;
+}	
+
+.glyphicon {
+	top:10rem;
+}
