--- a/css/stilo.css
+++ b/css/stilo.css
@@ -547,3 +547,71 @@ body{
 .glyphicon {
 	top:10rem;
 }
+
+#valor{
+	padding-top: 4.6rem;
+	background:#d6c06d; 
+	padding-bottom: 7.4rem
+}
+
+#valor h2{
+	color: white;
+	font-size: 4.5rem;
+	font-weight: 300;
+	margin-bottom: 6.7rem;
+}
+
+#valor h2 span{
+	font-weight: 400;
+}
+
+#valor  h3{
+	color: white;
+	font-weight: 300;
+	font-size: 3.5rem;
+	margin-bottom: 2.2rem;
+}
+
+#valor  h3 span{
+	font-weight: 400;
+}
+
+#valor  p{
+	color: white;
+	line-height: 1.7;
+	font-weight: 300;
+	font-size: 2rem;
+	margin-bottom:2.9rem; 
+}
+
+#valor .botao-menu {
+	color: #9b8019;
+	padding: .3rem 4.8rem;
+} 
+
+#valor .responsive{
+    margin-bottom: 4.5rem;
+}
+
+.just{
+	color:white;
+	font-weight: 400;
+	font-size: 1.6rem;
+}
+
+#rodape{
+	padding-top: .6rem;
+    padding-bottom: 1.5rem;
+}
+
+small{
+	color: #a0801d;
+	font-size:1.3rem;
+	font-weight: 300;
+	margin-right: 2.8rem;
+}
+
+#rodape .responsive{
+	margin-right: 2.7rem;
+}
+
