--- a/css/stilo.css
+++ b/css/stilo.css
@@ -49,13 +49,13 @@ body{
 
 #link{
 	float: right;
-    margin-top: 1.75rem;
+    margin-top: 1.5rem;
 }
 
 #link li {
     display: inline-block;
     float: none;
-	padding-left: .6rem;
+	padding-left: .4rem;
   }
 
 #link li a {
@@ -71,9 +71,10 @@ body{
 }
 
 .soft{
-	padding-top:2.1rem;
+	padding-top: 3.6rem;
 	background-image:url(../img/fundo.jpg);
 	position: relative;
+	padding-bottom:3.8rem;
 	
 }
 
@@ -87,7 +88,7 @@ body{
 	color: white;
 	font-size: 2.4rem;
  	font-weight: 200;
- 	margin-bottom: 2.6rem;
+ 	margin-top: 13px;
 }
 
 .fundo{
@@ -108,13 +109,12 @@ body{
 .soft:after{
 	background:white;
 	border-radius: 50%;
-	width: 4rem;
+	width: 4.6rem;
 	height: 4.6rem;
 	position: absolute;
-    top: 51.8rem;
     left: 0;
     right: 0;
-    bottom: 0;
+    bottom: -2rem;
     margin: 0 auto;
     text-align: center;
     font-family: "FontAwesome";
@@ -127,20 +127,20 @@ body{
 }
 
 .soft img{
-	margin-bottom: 3.3rem;
+	margin-bottom: 4.2rem;
 }
 
 #colors{
-	padding-top: 4.6rem;
-	padding-bottom:7.7rem 
+	padding-top: 3.8rem;
+	padding-bottom: 7.3rem;
 }
 
 #colors h2{
 	color: #9b8019;
 	font-size: 4.5rem;
 	font-weight: 300;
-	margin-bottom: 2.1rem;
 }
+
 #colors .titulo-colors{
 	font-size: 4.5rem;
 	font-weight: 400;
@@ -173,8 +173,8 @@ body{
 #nutrients{
 	background: #e6ce76;
 	position: relative;
-	padding-top: 4.7rem;
-	padding-bottom: 10.2rem;
+	padding-top: 4.6rem;
+	padding-bottom: 9.515rem;
 }
 
 #nutrients h2{
@@ -184,18 +184,22 @@ body{
 	margin-bottom: 1.7rem;
 }
 
+#nutrients p{
+	margin-bottom:0;
+}
+
 #nutrients .img-fundo1{
  	position: absolute;
- 	top: 37.7rem;
-    right:8.1rem;
+ 	top: 500px;
+    right:81px;
  	opacity: .4;
 }
 
 #nutrients .img-fundo2{
  	position: absolute;
-    top: 38.8rem;
-    left:92.9rem;
- 	opacity: .4;
+    top: 500px;
+    left: 929px;
+    opacity: .4;
 }
 
 #nutrients span{
@@ -204,99 +208,115 @@ body{
 	color: white;
 }
 
+.linha{
+	position: absolute;
+    bottom: 17rem;
+    left: 27rem;
+    width: 20%;
+	
+}
+
+.linha2{
+	position: absolute;
+    left: 20rem;
+    bottom: 8rem;
+}
+
+.linha3{
+    position: absolute;
+    right: 28rem;
+    bottom: 12rem;
+}
+
+.linha4{
+	position: absolute;
+    right: 27rem;
+    bottom: 5rem;
+}
+
+
+
 #nutrients #pell{
 	font-weight: 400;
 	font-size: 4.5rem;
 }
 
 .banana-des{
-	margin-top: 3.9rem;
 	position: relative;
 }
 
 .calories{
-	position: absolute;
-	top: 20.8rem;
-	left: 19.3rem;
-}
-
-.calories:before,.vitamins:before,.carbohydrate:before,.protein:before{
-   	color:#e7c65d;
-	font-family: "FontAwesome";
-    font-style: normal;
-    font-weight: normal;
-    text-decoration: inherit;
-	content: "\f111";
-	text-align: center;
-	font-size: 16px;
-	border-radius:50%;
-	background-color: transparent;
-	border:solid 1px #e7c65d;
-	width: 30px;
-	height: 30px;
-	}
-
-.calories:before{
-	position: absolute;
-	top:-13rem;
-	left:27rem;
-
-}
-
-.vitamins:before{
-	position: absolute;
-	top:-19.4rem;
-	left:35.8rem;
-}
-.carbohydrate:before{
-	position: absolute;
-	top:-8.5rem;
-	right:25.4rem;
-}
-.protein:before{
-	position: absolute;
-	top:-15.8rem;
-	right:36.4rem;
+	float :left;
+	margin-top: 18rem;
+    margin-left: 20rem;
 }
 
 .vitamins{
-	position: absolute;
-	top: 34.7rem;
-	left: 9.3rem;
+	float: left;
+	clear: left;
+	margin-top: 9rem;
+    margin-left: 10rem;
 }
 
 .carbohydrate{
-	position: absolute;
-	top: 20.8rem;
-	right: 19.3rem;
+	float: right;
+    margin-top: -15rem;
+    margin-right: 14rem;
 }
-
 
 .protein{
-	position: absolute;
-	top: 34.7rem;
-	right: 9.3rem;
+	float: right;
+	clear: right;
+	margin-top: -7rem;
+    margin-right: 14rem;
 }
 
-#nutrients .linha{
-	font-size: 2.4rem;
-	position: absolute;
-	top: 18rem;
-	left:26rem;
+#nutrients #circulo1, #nutrients #circulo4, #nutrients #circulo3, #nutrients #circulo2{
+	text-align: center;
+	border-radius:50%;
+	background-color: transparent;
+	border:solid 1px #e7c65d;
+	padding: 4px 6px;
+    font-size: 10px;
 }
 
-#nutrients .linha1{
-	font-size: 2.4rem;
-	position: absolute;
-	top: 15rem;
-	left:27.4rem;
+#nutrients{
+	padding-bottom: 30rem;
 }
 
-#nutrients .linha2{
-	font-size: 2.4rem;
+#circulo1{
 	position: absolute;
-	top: 12rem;
-	left:29rem;
+   	top: 25%;
+    right: 12%;
+}
+
+#circulo2{
+	position: absolute;
+   	top: 35%;
+    right: 10%;
+}
+
+#circulo3{
+	position: absolute;
+    top: 42%;
+    right: 29%;
+}
+
+#circulo4{
+	position: absolute;
+  	top: 50%;
+    right: 19%;
+}
+
+#circulo1 i,#circulo4 i,#circulo3 i,#circulo2 i{
+	color:#e7c65d;
+	font-size: 16px;
+}
+.img-circulo{
+	width: 88.39px;
+	height: 404px;
+	margin: 0 auto;
+	position: relative;
 }
 
 #casca-banana{
@@ -407,8 +427,8 @@ body{
 }
 
 .delicious .responsive{
-	width: 98%;
-	height: 47rem;
+	width:100%;
+	height: 470px;
 	border-radius: .7rem;
 	
 }
@@ -442,17 +462,21 @@ body{
     background: rgba(0, 0, 0, 0.6);
 }
 
-.prato-banana1, .prato-banana2,.prato-banana3{
+.prato-banana{
 	position: relative;
+    max-width: 90%;
+    display: flex;
+   
 }
 
 .texto-pranto-banana1,.texto-pranto-banana2,.texto-pranto-banana3{
-	width: 91%;
-	padding-left: 1px;
+	width:100%;
+	text-align: left;
+	padding-left: 10px;
 	box-shadow: 10rem 10rem 40rem #1b1811 inset; 
 	position: absolute;
 	bottom: 0;
-	left: 1.5rem;
+	left: 0;
 }
 
 #carousel{
@@ -592,10 +616,112 @@ small{
 	margin-right: 2.8rem;
 	margin-left: 2.7rem;
 }
+
+@media screen and (max-width: 1195px){
+
+	#circulo3 {
+    	top: 44%;
+	}
+
+	#circulo4 {
+		top: 53%;
+	}
+
+	.calories{
+		margin-top: 18rem;
+	    margin-left: 20rem;
+	}
+
+	.linha{
+	    bottom: 19rem;
+	    left: 26rem;
+	    width: 20%;
+	}
+
+	.linha2{
+		width: 21%;
+	    bottom: 10rem;
+	}
+
+	.linha3{
+	   	right: 22rem;
+    	bottom: 14rem;
+    	width: 14%;
+	     
+	}
+
+	.linha4{
+		right: 22rem;
+	    width: 15%;
+	}
+
+	.vitamins{
+		margin-top:0;
+	}
+
+	.carbohydrate{
+	    margin-top: -18rem;
+	}
+
+	#nutrients .img-fundo1,#nutrients .img-fundo2{
+    	display: none;
+	}
+
+}
+
+@media screen and (max-width: 991px){
+
+	#nutrients .img-fundo1,#nutrients .img-fundo2{
+    	display: none;
+	}
+
+	.delicious .responsive {
+		padding-bottom: 2rem;
+		height: auto;
+
+	}
+
+	.texto-pranto-banana1, .texto-pranto-banana2, .texto-pranto-banana3 {
+		bottom:2rem;
+	}
+	.calories{
+		margin-top: 15rem;
+		margin-left: 17rem;
+	}
+
+	.linha{
+	    bottom: 22rem;
+	    width: 15%;
+	}
+
+	.linha2{
+		width: 15%;
+    	bottom: 13rem;
+	}
+
+	.linha3{
+	    bottom: 16rem; 
+	}
+
+	.linha4{
+		bottom: 7rem;
+	}
+
+	.carbohydrate{
+	    margin-right: 10rem
+	}
+
+	.protein{
+		margin-top: -9rem;
+   		margin-right: 10rem;
+	}
+
+}
 @media screen and (max-width: 760px){
 	html{
-	font-size: 5px;
+		font-size: 5px;
 		}
+
 	.navbar-default {
 		position: relative;
 	}
@@ -603,10 +729,9 @@ small{
 	.navbar-default .navbar-collapse, .navbar-default .navbar-form{
 		border: none;
 		background-color:white;
-		width: 50%;
+		width: 40%;
 		position: absolute;
-		top:1.5rem;
-		right:1.5rem;
+		right:5rem;
 		z-index: 100;
 	}
 
@@ -650,32 +775,6 @@ small{
 		width: 50%;
 	} 
 
-	.banana-d{
-		width: 25%;
-	}
-
-	#nutrients .img-fundo1,#nutrients .img-fundo2{
-    	display: none;
-	}
-
-	.calories:before{
-		left: 18rem;
-	}
-
-	.vitamins:before{
-		left: 27rem;
-    	top: -13rem;
-	}
-
-	.carbohydrate:before{
-		top: -6.5rem;
-		right:  15.4rem;
-	}
-
-	.protein:before{
-		right: 26rem;
-    	top: -5.8rem;
-	}
 
 	.fundo-esquerda {
 		left: 0;
@@ -692,16 +791,12 @@ small{
 	}
 
 	.delicious .responsive {
-		width: 70rem;
 		padding-bottom: 4rem;
-		height: auto;
 
 	}
 
 	.texto-pranto-banana1, .texto-pranto-banana2, .texto-pranto-banana3 {
-		width:70rem;
-		bottom: 4rem;
-		left: 6.2rem;
+		bottom:4rem;
 	}
 
 	#valor .responsive {
@@ -711,5 +806,100 @@ small{
 	#valor .botao-menu {
 		margin-bottom: 3rem;
 	}
-	
+
+	#colors span {
+		font-weight: 200;
+		font-size: 2.5rem;
+	}
+
+	#casca-banana p {
+		font-size: 2.5rem;
+	}
+
+	.just {
+		font-size: 2rem;
+	}
+
+	small {
+		font-size: 2rem;
+	}
+
+	#circulo3 {
+    	top: 32%;
+    	right: 34%;
+	}
+
+	#circulo4 {
+		top: 40%;
+    	right: 25%;
+	}
+
+	#circulo2{
+		top: 24%;
+		right: 15%;
+	}
+
+	#circulo1{
+		top: 15%;
+		right: 16%;
+	}
+
+	.calories{
+		margin-top: 25rem;
+    	margin-left: 25rem;
+	}
+
+	.linha{
+		bottom: 52rem;
+    	left: 38rem;
+    	width: 15%;
+	}
+
+	.linha2{
+		width: 15%;
+	    bottom: 38rem;
+    	left: 35rem;
+	}
+
+	.linha3{
+	    right: 33rem;
+    	bottom: 39rem; 
+	}
+
+	.linha4{
+		right: 33rem;
+    	bottom: 25rem;
+	}
+
+	.vitamins{
+		margin-top: 6rem;
+    	margin-left: 20rem;
+	}
+
+	.carbohydrate{
+	    margin-top: -42rem;
+    	margin-right: 20rem;
+	}
+
+	.protein {
+	    margin-top: -27rem;
+	    margin-right: 26rem;
+	}
+
+}
+@media screen and (max-width: 451px){
+
+	.calories {
+		margin-left: 0;
+    	margin-top: 16rem;
+    }
+
+    .linha {
+    	bottom: 58rem;
+    	left: 18rem;
+    }
+
+    .vitamins {
+    	margin-top: 3rem;
+    }
 }
