--- a/css/stilo.css
+++ b/css/stilo.css
@@ -29,12 +29,19 @@ body{
 }
 
 .botao-menu{
+	margin-right: 2.9rem;
+	outline: none;
 	background: transparent;
 	border: 1px solid #9b8019;
 	border-radius: 2rem;
 	padding: .4rem 1.424rem;
 	font-size: 1.6rem;
 	text-transform: uppercase;
+}
+
+.botao-menu:focus {
+ 	outline: none;
+ 	
 }
 
 .navbar-default{
@@ -74,8 +81,6 @@ body{
 	padding-top: 3.6rem;
 	background-image:url(../img/fundo.jpg);
 	position: relative;
-	padding-bottom:3.8rem;
-	
 }
 
 .soft h2{
@@ -89,6 +94,7 @@ body{
 	font-size: 2.4rem;
  	font-weight: 200;
  	margin-top: 13px;
+ 	margin-bottom: 2.95rem;
 }
 
 .fundo{
@@ -109,8 +115,8 @@ body{
 .soft:after{
 	background:white;
 	border-radius: 50%;
-	width: 4.6rem;
-	height: 4.6rem;
+	width: 4rem;
+	height: 4rem;
 	position: absolute;
     left: 0;
     right: 0;
@@ -145,6 +151,7 @@ body{
 	font-size: 4.5rem;
 	font-weight: 400;
 }
+
 #colors p{
 	color:#b9a15b;
 	font-size:2.17rem;
@@ -190,14 +197,14 @@ body{
 
 #nutrients .img-fundo1{
  	position: absolute;
- 	top: 500px;
+ 	top: 290px;
     right:81px;
  	opacity: .4;
 }
 
 #nutrients .img-fundo2{
  	position: absolute;
-    top: 500px;
+    top: 290px;
     left: 929px;
     opacity: .4;
 }
@@ -233,8 +240,6 @@ body{
     right: 27rem;
     bottom: 5rem;
 }
-
-
 
 #nutrients #pell{
 	font-weight: 400;
@@ -281,7 +286,7 @@ body{
 }
 
 #nutrients{
-	padding-bottom: 30rem;
+	padding-bottom: 8.3rem;
 }
 
 #circulo1{
@@ -312,6 +317,7 @@ body{
 	color:#e7c65d;
 	font-size: 16px;
 }
+
 .img-circulo{
 	width: 88.39px;
 	height: 404px;
@@ -321,7 +327,7 @@ body{
 
 #casca-banana{
 	padding-top: 4.6rem;
-	padding-bottom:7.7rem;
+	padding-bottom: 5.4rem;
 	position: relative;
 }
 
@@ -341,6 +347,7 @@ body{
 	color: #9b8019;
 	line-height: 1.5;
 	font-weight: 200;
+	font-size: 2.3rem;
 }
 
 #casca-banana h2 span{
@@ -421,7 +428,7 @@ body{
 
 .delicious{
 	padding-top: 4.65rem;
-	padding-bottom:7rem;
+	padding-bottom: 7.05rem;
 	position: relative;
 	background-position: bottom center; 
 }
@@ -466,7 +473,6 @@ body{
 	position: relative;
     max-width: 90%;
     display: flex;
-   
 }
 
 .texto-pranto-banana1,.texto-pranto-banana2,.texto-pranto-banana3{
@@ -481,7 +487,7 @@ body{
 
 #carousel{
 	padding-top: 4.6rem;
-	padding-bottom: 17.7rem;
+	padding-bottom: 16.3rem;
 }
 
 #carousel h2{
@@ -549,8 +555,7 @@ body{
 #valor{
 	padding-top: 4.6rem;
 	background:#d6c06d; 
-	padding-bottom: 6.4rem;
-
+	padding-bottom: 6.2rem;
 }
 
 #valor h2{
@@ -717,6 +722,7 @@ small{
 	}
 
 }
+
 @media screen and (max-width: 760px){
 	html{
 		font-size: 5px;
@@ -887,19 +893,47 @@ small{
 	}
 
 }
-@media screen and (max-width: 451px){
+@media screen and (max-width: 550px){
 
 	.calories {
+		width: 17%;
 		margin-left: 0;
-    	margin-top: 16rem;
+    	margin-top: 22rem;
     }
 
     .linha {
     	bottom: 58rem;
-    	left: 18rem;
+    	left: 15rem;
     }
 
     .vitamins {
-    	margin-top: 3rem;
+    	margin-top: 8rem;
+    	margin-left: 0;
+	}
+
+	.linha2 {
+    	width: 17%;
+	    bottom: 45rem;
+	    left: 15rem;
+	}
+
+	.carbohydrate{
+	    margin-top: -48rem;
+    	margin-right: 0;
+	}
+
+	.linha4 {
+   	 	right: 15rem;
+    	bottom: 30rem;
     }
+
+	.protein {
+	    margin-top: -30rem;
+	    margin-right: 0;
+	}
+
+	.linha3 {
+    	right: 13rem;
+   		bottom: 45rem;
+	}
 }
